feat(security) : configure csrf protection
